<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:background="@drawable/colgados07">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categorias"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"


        android:id="@+id/TvBienV2"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/animals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:paddingLeft="10dp"
            android:layout_weight=".5"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:text="@string/paises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight=".5"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="131dp"
            android:layout_height="100dp"
            android:layout_weight=".5"
            android:id="@+id/imageViewAnima"
            android:paddingEnd="10dp"
            android:contentDescription="@string/animals"
            tools:ignore="RtlSymmetry"
            android:src="@drawable/animales2" />

        <ImageView
            android:id="@+id/imageViewpais"
            android:layout_height="100dp"
            android:paddingStart="10dp"
            android:layout_weight=".5"
            android:layout_width="131dp"
            android:contentDescription="@string/paises"
            tools:ignore="RtlSymmetry"
            android:src="@drawable/paises2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/salud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight=".5"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

        <TextView
            android:text="@string/universo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight=".5"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/holo_red_dark" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageViewsalud"
            android:layout_width="131dp"
            android:layout_weight=".5"
            android:layout_height="100dp"
            android:paddingTop="10dp"
            android:contentDescription="@string/salud"
            android:src="@drawable/salud2" />

        <ImageView
            android:id="@+id/imageViewplane"
            android:layout_weight=".5"
            android:layout_width="131dp"
            android:layout_height="100dp"
            android:paddingTop="10dp"
            android:contentDescription="@string/universo"
            android:src="@drawable/universo3" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/vehiculos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_weight=".5"
            android:textColor="@android:color/holo_red_dark"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:text="@string/cuerpohu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_weight=".5"
            android:textColor="@android:color/holo_red_dark"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageButtonvehiculos"
            android:layout_weight=".5"
            android:layout_width="131dp"
            android:layout_height="100dp"
            android:contentDescription="@string/cuerpohu"
            android:src="@drawable/vehiculos2" />

        <ImageView
            android:layout_weight=".5"
            android:id="@+id/imageButtonCuerpoH"
            android:layout_width="131dp"
            android:layout_height="100dp"
            android:contentDescription="@string/vehiculos"
            android:src="@drawable/cuerpoh3" />
    </LinearLayout>

</LinearLayout>
